[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Layers/SoundSetup.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/new/Atlas/Reload.atlastex" type="Texture" id=2]
[ext_resource path="res://UI/new_theme.theme" type="Theme" id=3]
[ext_resource path="res://UI/Layers/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/new/Atlas/House.atlastex" type="Texture" id=5]
[ext_resource path="res://assets/new/Atlas/Resume.atlastex" type="Texture" id=6]
[ext_resource path="res://assets/new/Atlas/Cancel.atlastex" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
// Default Filter

uniform float _size : hint_range(0, 7) = 3.0;

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, _size).rgb;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/_size = 3.0

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopConf" type="PopupDialog" parent="."]
visible = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -951.0
margin_top = 72.0
margin_right = -105.0
margin_bottom = -100.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopConf"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopConf/MarginContainer"]
margin_left = 40.0
margin_top = 30.0
margin_right = 806.0
margin_bottom = 860.0
custom_constants/separation = 36

[node name="SoundSetup" parent="PopConf/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 766.0
margin_bottom = 354.0

[node name="Resume" type="Button" parent="PopConf/MarginContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 766.0
margin_bottom = 473.0
text = "KEY_RESUME"
icon = ExtResource( 6 )
expand_icon = true

[node name="Restart" type="Button" parent="PopConf/MarginContainer/VBoxContainer"]
margin_top = 509.0
margin_right = 766.0
margin_bottom = 592.0
text = "KEY_RESTART"
icon = ExtResource( 2 )
expand_icon = true

[node name="EndGame" type="Button" parent="PopConf/MarginContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 766.0
margin_bottom = 711.0
text = "KEY_END_GAME"
icon = ExtResource( 7 )
expand_icon = true

[node name="MainMenu" type="Button" parent="PopConf/MarginContainer/VBoxContainer"]
margin_top = 747.0
margin_right = 766.0
margin_bottom = 830.0
text = "KEY_MAIN_MENU"
icon = ExtResource( 5 )
expand_icon = true

[connection signal="pressed" from="PopConf/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PopConf/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PopConf/MarginContainer/VBoxContainer/EndGame" to="." method="_on_EndGame_pressed"]
[connection signal="pressed" from="PopConf/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
